force-app/main/default/objects/Case/fields/WAW_Custom_Demos_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>WAW_Custom_Demos_Account_Name__c</fullName>
    <label>Custom Demos Account Name</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>All Saints Centre for Mission &amp; Ministry</fullName>
            </value>
            <value>
                <fullName>ARAG</fullName>
            </value>
            <value>
                <fullName>ARAG Ireland</fullName>
            </value>
            <value>
                <fullName>Bank Workers Charity</fullName>
            </value>
            <value>
                <fullName>Believe Housing</fullName>
            </value>
            <value>
                <fullName>Bridgewater Community Healthcare NHS FT</fullName>
            </value>
            <value>
                <fullName>Broads Authority</fullName>
            </value>
            <value>
                <fullName>Class Insurance</fullName>
            </value>
            <value>
                <fullName>Cornwall Council</fullName>
            </value>
            <value>
                <fullName>Deminos</fullName>
            </value>
            <value>
                <fullName>Education Development Trust</fullName>
            </value>
            <value>
                <fullName>Emovis Operations Leeds Ltd</fullName>
            </value>
            <value>
                <fullName>Frays Academy Trust</fullName>
            </value>
            <value>
                <fullName>GTS - Kuoni Global Travel Services</fullName>
            </value>
            <value>
                <fullName>Harrogate Borough Council</fullName>
            </value>
            <value>
                <fullName>Henry Cavindish School</fullName>
            </value>
            <value>
                <fullName>Howden Group</fullName>
            </value>
            <value>
                <fullName>Ian Ramsey Church of England Acadamy</fullName>
            </value>
            <value>
                <fullName>Insight Wellbeing At Work</fullName>
            </value>
            <value>
                <fullName>James Paget University Hospital</fullName>
            </value>
            <value>
                <fullName>Longhurst Group</fullName>
            </value>
            <value>
                <fullName>Motiv8 South</fullName>
            </value>
            <value>
                <fullName>National Friendly Society</fullName>
            </value>
            <value>
                <fullName>Newcastle College Group (NCG)</fullName>
            </value>
            <value>
                <fullName>Norfolk and Norwich University Hospital NHS FT</fullName>
            </value>
            <value>
                <fullName>Norfolk and Suffolk NHS Foundation</fullName>
            </value>
            <value>
                <fullName>Norfolk and Waveney CCG</fullName>
            </value>
            <value>
                <fullName>Norfolk Community Health &amp; Care</fullName>
            </value>
            <value>
                <fullName>North Norfolk CCG</fullName>
            </value>
            <value>
                <fullName>North Yorkshire Police</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>