force-app/main/default/objects/Case/fields/WAW_Date_Accepted_By_Therapist__c.field-meta.xml
<CustomField>
    <fullName>WAW_Date_Accepted_By_Therapist__c</fullName>
    <label>Date Accepted By Therapist</label>
    <type>Date</type>
</CustomField>