force-app/main/default/objects/Case/fields/WAW_Date_of_First_Offered_Appointment__c.field-meta.xml
<CustomField>
    <fullName>WAW_Date_of_First_Offered_Appointment__c</fullName>
    <label>Date of First Offered Appointment</label>
    <type>Date</type>
</CustomField>