force-app/main/default/objects/Case/fields/WAW_Date_Referred_to_Therapist__c.field-meta.xml
<CustomField>
    <fullName>WAW_Date_Referred_to_Therapist__c</fullName>
    <label>Date Referred to Therapist</label>
    <type>Date</type>
</CustomField>