force-app/main/default/objects/Case/fields/WAW_Days_Since_Final_Session__c.field-meta.xml
<CustomField>
    <fullName>WAW_Days_Since_Final_Session__c</fullName>
    <formula>IF( ISNULL(  ClosedDate  ), (NOW() - WAW_Final_Session_Date__c ), NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Final Session</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>