force-app/main/default/objects/Case/fields/WAW_Details_of_Risk__c.field-meta.xml
<CustomField>
    <fullName>WAW_Details_of_Risk__c</fullName>
    <description>Details of Risk identified upon referral</description>
    <label>Details of Risk</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>