force-app/main/default/objects/Case/fields/WAW_Displaying_Risk_on_First_Contact__c.field-meta.xml
<CustomField>
    <fullName>WAW_Displaying_Risk_on_First_Contact__c</fullName>
    <label>Displaying Risk on First Contact?</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>No</fullName>
                <default>true</default>
                <label>No</label>
            </value>
            <value>
                <fullName>Yes</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>