force-app/main/default/objects/Case/fields/WAW_EAP_File_ID__c.field-meta.xml
<CustomField>
    <fullName>WAW_EAP_File_ID__c</fullName>
    <externalId>true</externalId>
    <label>EAP File ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>