force-app/main/default/objects/Case/fields/WAW_External_Referrer_Contact__c.field-meta.xml
<CustomField>
    <fullName>WAW_External_Referrer_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>External Referrer Contact</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Contact.Account.Name</field>
            <operation>equals</operation>
            <value>Bank Workers Charity</value>
        </filterItems>
        <filterItems>
            <field>Contact.RecordTypeId</field>
            <operation>equals</operation>
            <value>Contract Contact</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Cases (External Referrer)</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>