force-app/main/default/objects/Case/fields/WAW_Impact_Of_Problem__c.field-meta.xml
<CustomField>
    <fullName>WAW_Impact_Of_Problem__c</fullName>
    <label>Impact Of Problem</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>At Work</fullName>
            </value>
            <value>
                <fullName>Off Sick</fullName>
            </value>
            <value>
                <fullName>Suspension</fullName>
            </value>
            <value>
                <fullName>Suspension - Maternity</fullName>
            </value>
            <value>
                <fullName>Maternity</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>