force-app/main/default/objects/Case/recordTypes/Placeholder.recordType-meta.xml
<RecordType>
    <fullName>Placeholder</fullName>
    <active>true</active>
    <businessProcess>N/A - record type included to support deployment dependencies. This shouldn't be used</businessProcess>
    <label>Do not use</label>
</RecordType>