force-app/main/default/objects/Case/validationRules/Closed_Date_Validation.validationRule-meta.xml
<ValidationRule>
    <fullName>Closed_Date_Validation</fullName>
    <active>true</active>
    <description>Case can not be closed before case opened date</description>
    <errorConditionFormula>ClosedDate  &lt;  CreatedDate
&amp;&amp; $Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c</errorConditionFormula>
    <errorMessage>Date Closed cannot be before Date Opened</errorMessage>
</ValidationRule>