force-app/main/default/objects/Case/validationRules/Closing_Resolutions_Required_Discharged.validationRule-meta.xml
<ValidationRule>
    <fullName>Closing_Resolutions_Required_Discharged</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
OR(
ISPICKVAL( Status , &apos;Discharged&apos;),
ISPICKVAL( Status, &apos;Closed Awaiting Admin&apos;)),
ISPICKVAL( Reason,&quot;&quot; )
)
&amp;&amp; $Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c</errorConditionFormula>
    <errorDisplayField>Reason</errorDisplayField>
    <errorMessage>When closing a case the &apos;Closing Resolutions&apos; field must be completed</errorMessage>
</ValidationRule>