force-app/main/default/objects/Case/validationRules/Detailed_Reason_For_Closure.validationRule-meta.xml
<ValidationRule>
    <fullName>Detailed_Reason_For_Closure</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(Reason) = &apos;Signposted&apos;, TEXT(Signposted_To__c) = &apos;&apos;)</errorConditionFormula>
    <errorDisplayField>Signposted_To__c</errorDisplayField>
    <errorMessage>You must specify where the client was signposted to</errorMessage>
</ValidationRule>