force-app/main/default/objects/Case/validationRules/Open_Risk_Val.validationRule-meta.xml
<ValidationRule>
    <fullName>Open_Risk_Val</fullName>
    <active>true</active>
    <description>An open Risk is preventing case file closure.
Is_Risk_Open roll up summary counts risks without sign off</description>
    <errorConditionFormula>AND(
Is_Risk_Open__c &gt; 0,
OR(
ISPICKVAL(Status, &apos;Discharged&apos;),
ISPICKVAL(Status, &apos;Closed Awaiting Admin&apos;)
))</errorConditionFormula>
    <errorMessage>An open Risk is preventing case file closure.</errorMessage>
</ValidationRule>