force-app/main/default/objects/Case/validationRules/Take_To_Supervision.validationRule-meta.xml
<ValidationRule>
    <fullName>Take_To_Supervision</fullName>
    <active>true</active>
    <description>Ensures that the practitioner who changes the &apos;Take to Supervision&apos; field is the same practitioner who owns the case/</description>
    <errorConditionFormula>AND(ISCHANGED(Take_to_Supervision__c),
OwnerId != $User.Id)</errorConditionFormula>
    <errorDisplayField>Take_to_Supervision__c</errorDisplayField>
    <errorMessage>Only the case owner can amend this field</errorMessage>
</ValidationRule>