force-app/main/default/objects/Case/validationRules/Therapist_Not_Blank_If_Referred_Date.validationRule-meta.xml
<ValidationRule>
    <fullName>Therapist_Not_Blank_If_Referred_Date</fullName>
    <active>true</active>
    <description>Referred to therapist name cannot be blank if referred date entered</description>
    <errorConditionFormula>AND(NOT(ISBLANK( WAW_Date_Referred_to_Therapist__c )),
 ISBLANK( WAW_Referred_To__c ))</errorConditionFormula>
    <errorMessage>You need to add the Therapist Name this case has been referred out to.</errorMessage>
</ValidationRule>