force-app/main/default/objects/Case/validationRules/Waiting_Populated_When_Status_Waiting.validationRule-meta.xml
<ValidationRule>
    <fullName>Waiting_Populated_When_Status_Waiting</fullName>
    <active>true</active>
    <errorConditionFormula>AND(TEXT(Status) = &apos;Waiting&apos;, TEXT(Waiting__c) =&apos;&apos;)</errorConditionFormula>
    <errorDisplayField>Waiting__c</errorDisplayField>
    <errorMessage>This field must be filled when &apos;Waiting&apos; is selected</errorMessage>
</ValidationRule>