force-app/main/default/objects/Case/validationRules/Waiting_Time_Paused.validationRule-meta.xml
<ValidationRule>
    <fullName>Waiting_Time_Paused</fullName>
    <active>true</active>
    <description>Ensures &apos;contact us by&apos; date time field is entered if status = &apos;Waiting Time Paused&apos;</description>
    <errorConditionFormula>AND(
TEXT(Status) = &apos;Waiting Time Paused&apos;,
ISBLANK(Contact_Us_Deadline__c))
&amp;&amp; $Setup.rh2__PS_Settings__c.rh2__Run_Validation_Rule__c</errorConditionFormula>
    <errorDisplayField>Contact_Us_Deadline__c</errorDisplayField>
    <errorMessage>A contact us deadline must be specified to use this Case Status</errorMessage>
</ValidationRule>