force-app/main/default/objects/Case/listViews/Cases_With_Email_Responses.listView-meta.xml
<ListView>
    <fullName>Cases_With_Email_Responses</fullName>
    <columns>CASES.CASE_NUMBER</columns>
    <columns>NAME</columns>
    <columns>CASES.SUBJECT</columns>
    <columns>CASES.STATUS</columns>
    <columns>CASES.PRIORITY</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Email_Status__c</field>
        <operation>equals</operation>
        <value>Received Email</value>
    </filters>
    <label>Cases With Email Responses</label>
    <sharedTo>
        <roleAndSubordinatesInternal>Insight_Operational_Services</roleAndSubordinatesInternal>
    </sharedTo>
</ListView>